[package]
name = "hantemcli"
version = "0.1.0"
authors = ["foo-dogsquared <foo.dogsquared@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.10.1", default-features = false, features = ["hjson", "ini", "json", "toml", "yaml"]}
handlebars = { version = "3.0.0-beta.6", features = ["dir_source"] }
structopt = "0.3"
toml = "0.5"

[profile.release]
lto = true
opt-level = 's'
panic = "abort"
