[package]
name = "hantemcli"
version = "0.2.0"
authors = ["foo-dogsquared <foo.dogsquared@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.10.1", default-features = false, features = ["hjson", "ini", "json", "toml", "yaml"]}
handlebars = "3"
structopt = "0.3"
toml = "0.5"
walkdir = "2.3.1"

[profile.release]
lto = true
opt-level = 's'
panic = "abort"
